# Structured-OCR

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: demo2.ipynb
structured_ocr/: utils.py
structured_ocr/llm_ocr/: __init__.py  configuration.py  graph.py  llm.py  prompt.py  schema.py
structured_ocr/ocr/: __init__.py  ocr.py
structured_ocr/preprocess/: __init__.py  clarity.py  deskew.py  preprocess.py  upscaler.py
